test: item 연도를 distinct 쿼리를 통해 조회 하여 제공 메서드 테스트 및 테스트 코드 정리